--- a/index.html
+++ b/index.html
@@ -1,176 +1,274 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>911 Dispatch Simulator</title>
-<style>
-body{margin:0;font-family:'Segoe UI',sans-serif;background:linear-gradient(135deg,#1c92d2,#6dd5ed);color:#fff;display:flex;flex-direction:column;min-height:100vh;}
-.container{width:100%;display:flex;justify-content:center;align-items:center;flex:1;}
-.card{background:rgba(0,0,0,0.25);padding:30px;border-radius:12px;box-shadow:0 10px 25px rgba(0,0,0,0.4);width:350px;text-align:center;}
-input,select,button{width:100%;padding:12px;margin:10px 0;border-radius:8px;border:none;font-size:1em;}
-input{background:rgba(255,255,255,0.2);color:#fff;}
-input::placeholder{color:rgba(255,255,255,0.7);}
-select{background:rgba(255,255,255,0.2);color:#fff;}
-button{background:linear-gradient(90deg,#2575fc,#6a11cb);color:#fff;font-weight:bold;cursor:pointer;transition:0.3s;}
-button:hover{opacity:0.9;}
-p.link{cursor:pointer;text-decoration:underline;margin-top:10px;color:#fff;}
-h2{margin-bottom:20px;}
-.sidebar{background:rgba(0,0,0,0.3);width:220px;min-height:100vh;padding:20px;position:fixed;display:none;}
-.sidebar h3{margin-bottom:15px;}
-.sidebar button{width:100%;margin:5px 0;background:linear-gradient(to right,#2575fc,#6a11cb);padding:10px;border:none;border-radius:6px;cursor:pointer;transition:0.3s;}
-.sidebar button:hover{opacity:0.9;}
-.main{margin-left:240px;padding:20px;flex:1;overflow-x:auto;}
-table{width:100%;border-collapse:collapse;margin-top:15px;table-layout:fixed;word-wrap:break-word;}
-th,td{padding:8px;border:1px solid #fff;text-align:center;font-size:0.8em;}
-th{background:rgba(255,255,255,0.2);}
-ul{list-style:none;padding-left:0;}
-#liveCallList li{margin-bottom:6px;}
-.status-pending{color:yellow;font-weight:bold;}
-.status-waiting{color:deepskyblue;font-weight:bold;}
-.status-passed{color:limegreen;font-weight:bold;}
-.status-failed{color:red;font-weight:bold;}
-footer{text-align:center;padding:15px;font-size:0.9em;opacity:0.8;margin-top:20px;}
-#liveAdminControls{margin-bottom:15px;display:none;}
-#adminCreateUser{margin-bottom:15px;}
-@media(max-width:768px){.sidebar{position:relative;width:100%;}.main{margin-left:0;}}
-</style>
+  <meta charset="UTF-8">
+  <title>911 Dispatch Simulator</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: linear-gradient(135deg, #1e3c72, #2a5298);
+      color: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    .card {
+      background: #222;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0px 4px 8px rgba(0,0,0,0.5);
+      width: 400px;
+      text-align: center;
+    }
+    h1 { margin-bottom: 20px; }
+    input, select, button {
+      width: 90%;
+      margin: 8px 0;
+      padding: 10px;
+      border-radius: 6px;
+      border: none;
+      outline: none;
+    }
+    button {
+      background: #007bff;
+      color: #fff;
+      cursor: pointer;
+      font-weight: bold;
+    }
+    button:hover { background: #0056b3; }
+    #dashboard { display: none; width: 90%; max-width: 1200px; }
+    nav {
+      display: flex;
+      justify-content: space-around;
+      margin-bottom: 20px;
+    }
+    nav button { flex: 1; margin: 0 5px; }
+    .panel {
+      display: none;
+      background: #333;
+      padding: 20px;
+      border-radius: 12px;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 10px;
+    }
+    th, td {
+      padding: 10px;
+      border: 1px solid #555;
+      text-align: center;
+    }
+    footer {
+      text-align: center;
+      margin-top: 20px;
+      font-size: 12px;
+    }
+  </style>
 </head>
 <body>
+  <!-- Login Screen -->
+  <div class="card" id="loginCard">
+    <h1>911 Dispatch Simulator</h1>
+    <input type="text" id="username" placeholder="Username">
+    <input type="password" id="password" placeholder="Password">
+    <button onclick="login()">Login</button>
+  </div>
 
-<!-- LOGIN SCREEN -->
-<div class="container">
-<div id="loginDiv" class="card">
-<h2>Login</h2>
-<input type="text" id="loginUser" placeholder="Username">
-<input type="password" id="loginPass" placeholder="Password">
-<button id="loginBtn">Login</button>
-</div>
-</div>
+  <!-- Dashboard -->
+  <div id="dashboard">
+    <nav>
+      <button onclick="showPanel('scenariosPanel')">Scenarios</button>
+      <button onclick="showPanel('callsPanel')">Live Calls</button>
+      <button onclick="showPanel('resultsPanel')">Results</button>
+      <button onclick="showPanel('usersPanel')" id="usersBtn">Users</button>
+      <button onclick="logout()">Logout</button>
+    </nav>
+    <div id="welcome"></div>
 
-<!-- SIDEBAR -->
-<div class="sidebar" id="sidebar">
-<h3 id="userRole"></h3>
-<button onclick="showPanel('dashboard')">Dashboard</button>
-<button onclick="showPanel('live')">Live Calls</button>
-<button onclick="showPanel('scenarios')">Scenarios</button>
-<button onclick="showPanel('results')">Results</button>
-<button onclick="showPanel('adminCreateUser')" id="adminCreateBtn">Create Account</button>
-<button onclick="logout()">Logout</button>
-</div>
+    <!-- Scenarios -->
+    <div class="panel" id="scenariosPanel">
+      <h2>Scenario Management</h2>
+      <div id="scenarioForm" style="display:none;">
+        <textarea id="scenarioText" placeholder="Enter scenario..." style="width:100%; height:100px;"></textarea>
+        <button onclick="addScenario()">Add Scenario</button>
+      </div>
+      <ul id="scenarioList"></ul>
+    </div>
 
-<!-- MAIN CONTENT -->
-<div class="main">
-<div id="dashboard" class="card" style="display:none;">
-<h2>Welcome Dispatcher <span id="dashUser"></span></h2>
-<p>Status: <span id="userStatus" class="status-passed">Approved</span></p>
-</div>
+    <!-- Live Calls -->
+    <div class="panel" id="callsPanel">
+      <h2>Live Calls</h2>
+      <div id="callForm" style="display:none;">
+        <textarea id="callText" placeholder="Enter call..." style="width:100%; height:100px;"></textarea>
+        <button onclick="addCall()">Create Call</button>
+      </div>
+      <ul id="callList"></ul>
+    </div>
 
-<div id="live" class="card" style="display:none;">
-<h2>Live Calls</h2>
-<div id="liveAdminControls">
-<input type="text" id="liveDesc" placeholder="Call Description">
-<input type="text" id="liveLoc" placeholder="Location">
-<button id="addLiveBtn">Add Live Call</button>
-</div>
-<ul id="liveCallList"></ul>
-</div>
+    <!-- Results -->
+    <div class="panel" id="resultsPanel">
+      <h2>Results</h2>
+      <table>
+        <thead>
+          <tr><th>User</th><th>Scenario/Call</th><th>Service</th><th>Score</th><th>Status</th></tr>
+        </thead>
+        <tbody id="resultsTable"></tbody>
+      </table>
+    </div>
 
-<div id="scenarios" class="card" style="display:none;">
-<h2>Scenario Management</h2>
-<input type="text" id="scenarioText" placeholder="Scenario Description">
-<button id="addScenarioBtn">Add Scenario</button>
-<button id="deleteScenarioBtn">Delete Last Scenario</button>
-<ul id="scenarioList"></ul>
-</div>
+    <!-- User Management -->
+    <div class="panel" id="usersPanel">
+      <h2>User Management</h2>
+      <input type="text" id="newUser" placeholder="New Username">
+      <input type="password" id="newPass" placeholder="New Password">
+      <select id="newRole">
+        <option value="Dispatcher Trainee">Dispatcher Trainee</option>
+        <option value="Dispatcher High Command">Dispatcher High Command</option>
+        <option value="Admin">Admin</option>
+      </select>
+      <button onclick="createUser()">Create User</button>
+      <table>
+        <thead>
+          <tr><th>Username</th><th>Role</th><th>Actions</th></tr>
+        </thead>
+        <tbody id="usersTable"></tbody>
+      </table>
+    </div>
 
-<div id="results" class="card" style="display:none;">
-<h2>Results</h2>
-<table id="resultsTable">
-<thead>
-<tr><th>User</th><th>Scenario</th><th>Score</th><th>Eligible</th><th>Service</th><th>Pass/Fail</th><th>Feedback</th><th>Review</th></tr>
-</thead>
-<tbody></tbody>
-</table>
-<button id="exportBtn">Export CSV</button>
-</div>
+    <footer>
+      <p>Powered by Nextwave Roleplay Development Team</p>
+      <p>Powered by Shadowisfun</p>
+    </footer>
+  </div>
 
-<div id="adminCreateUser" class="card" style="display:none;">
-<h2>Create User Account</h2>
-<input type="text" id="newUser" placeholder="Username">
-<input type="password" id="newPass" placeholder="Password">
-<select id="newRole">
-<option value="Dispatcher Trainee">Dispatcher Trainee</option>
-<option value="Dispatcher High Command">Dispatcher High Command</option>
-<option value="Admin">Admin</option>
-</select>
-<button id="createAdminBtn">Create Account</button>
-</div>
-</div>
+  <script>
+    let users = JSON.parse(localStorage.getItem("users")) || {
+      "shadowisfun": {password:"aidenfav88!", role:"Owner"}
+    };
+    let currentUser = null;
+    let scenarios = JSON.parse(localStorage.getItem("scenarios")) || [];
+    let calls = JSON.parse(localStorage.getItem("calls")) || [];
+    let results = JSON.parse(localStorage.getItem("results")) || [];
 
-<footer>
-Powered by Nextwave Roleplay Development Team | Powered by Shadowisfun
-</footer>
+    function saveAll(){
+      localStorage.setItem("users", JSON.stringify(users));
+      localStorage.setItem("scenarios", JSON.stringify(scenarios));
+      localStorage.setItem("calls", JSON.stringify(calls));
+      localStorage.setItem("results", JSON.stringify(results));
+    }
 
-<script>
-// STORAGE
-let users = JSON.parse(localStorage.getItem('users')) || [];
-let scenarios = JSON.parse(localStorage.getItem('scenarios')) || [];
-let liveCalls = JSON.parse(localStorage.getItem('liveCalls')) || [];
-let results = JSON.parse(localStorage.getItem('results')) || [];
-let currentUser = null;
+    function login(){
+      let u = document.getElementById("username").value.trim();
+      let p = document.getElementById("password").value.trim();
+      if(users[u] && users[u].password === p){
+        currentUser = {username:u, role:users[u].role};
+        document.getElementById("loginCard").style.display="none";
+        document.getElementById("dashboard").style.display="block";
+        document.getElementById("welcome").innerText="Welcome Dispatcher " + u;
+        loadUsers();
+        loadScenarios();
+        loadCalls();
+        loadResults();
+        if(currentUser.role==="Admin" || currentUser.role==="Owner"){
+          document.getElementById("scenarioForm").style.display="block";
+          document.getElementById("callForm").style.display="block";
+          document.getElementById("usersBtn").style.display="inline-block";
+        } else {
+          document.getElementById("scenarioForm").style.display="none";
+          document.getElementById("callForm").style.display="none";
+          document.getElementById("usersBtn").style.display="none";
+        }
+      } else {
+        alert("Invalid credentials!");
+      }
+    }
 
-// OWNER
-if(!users.find(u=>u.username==='shadowisfun')){
-  users.push({username:'shadowisfun', password:'aidenfav88!', rank:'Admin'});
-  localStorage.setItem('users', JSON.stringify(users));
-}
+    function logout(){
+      currentUser=null;
+      document.getElementById("dashboard").style.display="none";
+      document.getElementById("loginCard").style.display="block";
+    }
 
-// LOGIN
-document.getElementById('loginBtn').addEventListener('click',()=>{
-  const u=document.getElementById('loginUser').value.trim();
-  const p=document.getElementById('loginPass').value.trim();
-  const user=users.find(x=>x.username===u && x.password===p);
-  if(!user){alert('Invalid credentials'); return;}
-  currentUser=user;
-  document.getElementById('loginDiv').style.display='none';
-  document.getElementById('sidebar').style.display='block';
-  document.getElementById('dashUser').innerText = user.username;
-  document.getElementById('userStatus').innerText = 'Approved';
-  document.getElementById('userRole').innerText = user.rank;
-  if(user.rank==='Admin'){document.getElementById('adminCreateBtn').style.display='block';document.getElementById('liveAdminControls').style.display='block';}
-  else{document.getElementById('adminCreateBtn').style.display='none';document.getElementById('liveAdminControls').style.display='none';}
-  showPanel('dashboard');
-});
+    function showPanel(id){
+      document.querySelectorAll(".panel").forEach(p=>p.style.display="none");
+      document.getElementById(id).style.display="block";
+    }
 
-// LOGOUT
-function logout(){
-  currentUser=null;
-  document.getElementById('sidebar').style.display='none';
-  document.getElementById('loginDiv').style.display='flex';
-}
+    // User Management
+    function loadUsers(){
+      if(!currentUser || (currentUser.role!=="Admin" && currentUser.role!=="Owner")) return;
+      let tbody=document.getElementById("usersTable");
+      tbody.innerHTML="";
+      for(let u in users){
+        let row=document.createElement("tr");
+        row.innerHTML=`<td>${u}</td>
+                       <td>
+                         <select onchange="changeRole('${u}', this.value)">
+                           <option ${users[u].role==="Dispatcher Trainee"?"selected":""}>Dispatcher Trainee</option>
+                           <option ${users[u].role==="Dispatcher High Command"?"selected":""}>Dispatcher High Command</option>
+                           <option ${users[u].role==="Admin"?"selected":""}>Admin</option>
+                           <option ${users[u].role==="Owner"?"selected":""}>Owner</option>
+                         </select>
+                       </td>
+                       <td>${(users[u].role==="Owner" && currentUser.username!=="shadowisfun")?"":"<button onclick='deleteUser(\""+u+"\")'>Delete</button>"}</td>`;
+        tbody.appendChild(row);
+      }
+    }
 
-// SHOW PANEL
-function showPanel(id){
-  ['dashboard','live','scenarios','results','adminCreateUser'].forEach(p=>document.getElementById(p).style.display='none');
-  document.getElementById(id).style.display='block';
-}
+    function createUser(){
+      let u=document.getElementById("newUser").value.trim();
+      let p=document.getElementById("newPass").value.trim();
+      let r=document.getElementById("newRole").value;
+      if(u && p && !users[u]){
+        users[u]={password:p, role:r};
+        saveAll(); loadUsers(); alert("User created!");
+      } else alert("Invalid or existing username!");
+    }
 
-// ADMIN CREATE ACCOUNT
-document.getElementById('createAdminBtn').addEventListener('click',()=>{
-  if(!currentUser || currentUser.rank!=='Admin'){alert('Only Admin can create users'); return;}
-  const u=document.getElementById('newUser').value.trim();
-  const p=document.getElementById('newPass').value.trim();
-  const r=document.getElementById('newRole').value;
-  if(!u||!p){alert('Enter username and password'); return;}
-  if(users.find(x=>x.username===u)){alert('User exists'); return;}
-  users.push({username:u,password:p,rank:r});
-  localStorage.setItem('users', JSON.stringify(users));
-  alert('User created successfully');
-  document.getElementById('newUser').value=''; document.getElementById('newPass').value='';
-});
-</script>
+    function deleteUser(u){
+      if(users[u].role==="Owner"){alert("Cannot delete Owner!");return;}
+      delete users[u]; saveAll(); loadUsers();
+    }
+    function changeRole(u, r){ users[u].role=r; saveAll(); }
 
+    // Scenarios
+    function addScenario(){
+      let txt=document.getElementById("scenarioText").value.trim();
+      if(txt){scenarios.push(txt); saveAll(); loadScenarios();}
+    }
+    function loadScenarios(){
+      let list=document.getElementById("scenarioList");
+      list.innerHTML="";
+      scenarios.forEach(s=>{let li=document.createElement("li");li.textContent=s;list.appendChild(li);});
+    }
+
+    // Calls
+    function addCall(){
+      let txt=document.getElementById("callText").value.trim();
+      if(txt){calls.push(txt); saveAll(); loadCalls();}
+    }
+    function loadCalls(){
+      let list=document.getElementById("callList");
+      list.innerHTML="";
+      calls.forEach(c=>{let li=document.createElement("li");li.textContent=c;list.appendChild(li);});
+    }
+
+    // Results
+    function loadResults(){
+      let tbody=document.getElementById("resultsTable");
+      tbody.innerHTML="";
+      for(let r of results){
+        if(currentUser.role==="Admin" || currentUser.role==="Owner" || r.user===currentUser.username){
+          let row=document.createElement("tr");
+          row.innerHTML=`<td>${r.user}</td><td>${r.text}</td><td>${r.service}</td><td>${r.score}</td><td>${r.status}</td>`;
+          tbody.appendChild(row);
+        }
+      }
+    }
+  </script>
 </body>
 </html>
 
